--- a/VMSetup/StaffNumberValidateDlg.wxs
+++ b/VMSetup/StaffNumberValidateDlg.wxs
@@ -4,13 +4,12 @@
     <Property Id="WIXUI_STAFFNUMBER" Value="StaffNumber" />
     <Property Id="WIXUI_STAFFMACADDRESS" Value="mac" />
     <UI>
-      <Dialog Id="StaffNumberValidateDlg" Width="370" Height="270" Title="Staff number validate ">
+      <Dialog Id="StaffNumberValidateDlg" Width="370" Height="270" Title="!(loc.StaffNumberValidateTitle)">
         <Control Id="BannerBitmap" Type="Bitmap" X="0" Y="0" Width="370" Height="44" TabSkip="no" Text="!(loc.LicenseAgreementDlgBannerBitmap)" />
         <Control Id="BannerLine" Type="Line" X="0" Y="44" Width="370" Height="0" />
         <Control Id="BottomLine" Type="Line" X="0" Y="234" Width="370" Height="0" />
-        <Control Id="Description" Type="Text" X="25" Y="23" Width="340" Height="15" Transparent="yes" NoPrefix="yes" Text="Please input your staff number" />
-        <Control Id="Title" Type="Text" X="15" Y="6" Width="200" Height="15" Transparent="yes" NoPrefix="yes" Text="Staff Number" />
-        <Control Id="StaffLabel" Type="Text" X="20" Y="80" Width="290" Height="20" NoPrefix="yes" Text="Staff Number" />
+        <Control Id="Description" Type="Text" X="25" Y="23" Width="340" Height="15" Transparent="yes" NoPrefix="yes" Text="!(loc.StaffNumberValidateDescription)" />
+        <Control Id="StaffLabel" Type="Text" X="20" Y="80" Width="290" Height="20" NoPrefix="yes" Text="!(loc.StaffLabel)" />
         <Control Id="StaffNumber" Type="Edit" X="20" Y="100" Width="320" Height="18" Property="WIXUI_STAFFNUMBER" Indirect="yes" />       
         <Control Id="Back" Type="PushButton" X="180" Y="243" Width="56" Height="17" Text="!(loc.WixUIBack)" />
         <Control Id="Next" Type="PushButton" X="236" Y="243" Width="56" Height="17" Default="yes" Text="!(loc.WixUINext)"/>
